--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,8 +1,8 @@
-name: .NET Core
+name: .NET
 
 on:
   push:
-    branches: [master]
+    branches: [master, net5]
   pull_request:
     branches: [master]
 
@@ -12,13 +12,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Setup .NET Core
+      - name: Setup .NET 5
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.301
-      - name: Install dependencies
-        run: dotnet restore
+          dotnet-version: '5.0.205'
+      - name: Bootstrap Cake
+        run: ./build.sh --target=Bootstrap --exclusive
       - name: Build
-        run: dotnet build --configuration Release --no-restore
+        run: ./build.sh --target=Build --exclusive
       - name: Test
-        run: dotnet test --no-restore --verbosity normal
+        run: ./build.sh --target=Test --exclusive
