--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -11,11 +11,24 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+  
       - name: Setup .NET 5
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.205'
-      - name: Build
+
+      - name: Build Windows
+        if: matrix.os == 'windows-latest'
         run: ./build.ps1 --target=Build --configuration=Release --exclusive
-      - name: Test
+      
+      - name: Build Unix
+        if: matrix.os != 'windows-latest'
+        run: .\build.sh --target=Build --configuration=Release --exclusive
+
+      - name: Test Windows
+        if: matrix.os == 'windows-latest'
         run: ./build.ps1 --target=Test --configuration=Release --exclusive
+
+      - name: Test Unix
+        if: matrix.os != 'windows-latest'
+        run: .\build.sh --target=Test --configuration=Release --exclusive
