--- a/test/HourShifterTests/HourShifterTests.csproj
+++ b/test/HourShifterTests/HourShifterTests.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
+		<RuntimeIdentifier>$(RID)</RuntimeIdentifier>
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
