--- a/test/HourShifterTests/HourShifterTests.csproj
+++ b/test/HourShifterTests/HourShifterTests.csproj
@@ -1,20 +1,37 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net5.0</TargetFramework>
+		<RuntimeIdentifier>$(RID)</RuntimeIdentifier>
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="nunit" Version="3.12.0" />
-		<PackageReference Include="Moq" Version="4.14.5" />
-		<PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+		<PackageReference Include="CommandLineParser" Version="2.8.0" />
+		<PackageReference Include="nunit" Version="3.13.2" />
+		<PackageReference Include="Moq" Version="4.16.1" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
+		<PackageReference Include="coverlet.collector" Version="3.1.0">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="coverlet.msbuild" Version="3.1.0">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\src\HourShifter\HourShifter.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include=".\SampleImages\*.jpg" CopyToOutputDirectory="Always"/>
+		<None Include=".\SampleImages\*.png" CopyToOutputDirectory="Always"/>
 	</ItemGroup>
 
 </Project>
