Switch to ImageSharp

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,10 +3,10 @@
 	"tasks": [
 		{
 			"label": "build",
-			"command": "dotnet",
+			"command": ".\\build.ps1",
 			"type": "process",
 			"args": [
-				"build"
+				"--target=build"
 			],
 			"problemMatcher": "$msCompile"
 		}
